--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nock": "^8.0.0",
     "standard": "^6.0.8",
     "tap-spec": "^4.1.1",
-    "tape": "^4.5.1"
+    "tape": "^4.5.1",
+    "coveralls": "^2.11.14"
   }
 }
